--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,7 +23,7 @@ body {
 
 /* Set properties for entire page */
 body {
-  background-color: var(--primary-100);
+  /* background-color: var(--primary-100); */
   color: var(--primary-500);
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -80,7 +80,12 @@ h6 {
 }
 
 .page-wrapper main {
-  max-width: 1200px;
-  width: 88%;
-  margin: 48px auto;
+  /* max-width: 1200px; */
+  /* width: 88%; */
+  /* margin: 48px auto; */
+}
+
+.page-wrapper main img {
+  width: 100%;
+  height: 100vh;
 }
