--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -83,9 +83,20 @@ h6 {
   /* max-width: 1200px; */
   /* width: 88%; */
   /* margin: 48px auto; */
+  height: 120vh;
 }
 
-.page-wrapper main img {
+.page-wrapper main div {
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  background-image: url("/images/under_construction.jpg");
+  background-position: center;
+  background-size: cover;
+}
+
+@media (max-width: 600px) {
+  .page-wrapper main div {
+    background-repeat: repeat-y;
+    background-size: 650px;
+  }
 }
