--- a/src/components/PostList/postList.module.css
+++ b/src/components/PostList/postList.module.css
@@ -58,8 +58,20 @@
   background-color: var(--primary-500);
 }
 
+.post-image-wrapper {
+  flex: 1;
+  position: relative;
+  min-height: 200px;
+  min-width: 100%;
+  cursor: pointer;
+}
+
 @media screen and (min-width: 768px) {
   .post-item {
     flex-direction: row;
+  }
+
+  .post-image-wrapper {
+    min-width: unset;
   }
 }
