--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,11 +6,11 @@
 
 /* Set CSS properties to reuse color properties */
 :root {
-  --primary-100: #f7e4e5;
-  --primary-200: #bfb0b1;
-  --primary-300: #fa9ba1;
-  --primary-400: #ccb1b3;
-  --primary-500: #1e0b0c;
+  --primary-100: #3399FF;
+  --primary-200: #f3ec78;
+  --primary-300: #af4261;
+  --primary-400: #bfdfff;
+  --primary-500: #091b2d;
   --light: #ffffff;
   --dark: #000000;
 }
@@ -23,12 +23,20 @@ body {
 
 /* Set properties for entire page */
 body {
-  background-color: var(--primary-100);
+  background-image: url('/images/old_bg.jpg');
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
   color: var(--primary-500);
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 16px;
   line-height: 1.5;
+}
+
+a {
+  text-decoration: none;
 }
 
 /* Set typographic properties for headings */
@@ -38,7 +46,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Major Mono Display', monospace;
+  font-family: 'Nasalization', sans-serif;
   margin: 4px 0;
   line-height: 1.1;
   text-transform: lowercase;
@@ -48,16 +56,45 @@ h1 {
   font-size: 3.052rem;
 }
 
+main section {
+  padding: 40px 50px 80px;
+}
+
+.lunar-lander {
+  min-height: 100vh;
+}
+
+.main-gradient-primary {
+  background-color: #f3ec78;
+  background-image: linear-gradient(45deg, #f3ec78, #af4261);
+  background-image: radial-gradient(at top left, #f3ec78 10%, #af4261 65%);
+  background-image: radial-gradient(at top left, var(--light) 10%, var(--primary-100) 65%);
+  background-size: 150% 200%;
+  background-position: center;
+}
+
+.main-gradient-text {
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent; 
+  -moz-text-fill-color: transparent;
+}
+
 h2 {
   font-size: 2.441rem;
+  color: white;
 }
 
 h3 {
   font-size: 1.953rem;
+  color: var(--light);
+  letter-spacing: 0.1em;
 }
 
 h4 {
   font-size: 1.563rem;
+  color: var(--light);
+  letter-spacing: 0.15em;
 }
 
 h5 {
@@ -80,7 +117,8 @@ h6 {
 }
 
 .page-wrapper main {
-  max-width: 1200px;
+  max-width: calc(100vw - 318px);
   width: 88%;
-  margin: 48px auto;
+  margin-top: 48px;
+  margin-left: 300px;
 }
