--- a/src/components/ProductList/productList.module.css
+++ b/src/components/ProductList/productList.module.css
@@ -2,6 +2,7 @@
   margin-bottom: 48px;
   min-height: 100vh;
   background-color: var(--dark);
+  padding-top: 40px;
 }
 
 .product-list-title {
@@ -10,6 +11,25 @@
   text-align: center;
   margin-bottom: 40px;
   letter-spacing: 0.05em;
+}
+
+.product-list-alert {
+  padding: 20px 40px;
+  background-color: rgba(255,255,255,0.3);
+  border-radius: 2rem;
+  box-shadow: 0 0 5px 5px rgba(255,255,255,0.1);
+  font-size: 20px;
+  font-family: 'Oswald', sans-serif;
+}
+
+.product-list-alert a {
+  text-decoration: none;
+  color: var(--primary-100);
+  transition: color 0.7s;
+}
+
+.product-list-alert a:hover {
+  color: white;
 }
 
 .product-list-grid {
@@ -35,10 +55,33 @@
 
 .product-name {
   font-size: 1.75rem;
+  position: relative;
+  z-index: 1;
+}
+
+.product-name:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: linear-gradient(90deg, #ffffff, var(--primary-100));
+  width: 0;
+  height: 100%;
+  transition: width 1s ease-in-out;
+  z-index: -1;
+}
+
+.product-item:hover .product-name, .product-name:hover {
+  color: var(--primary-100);
+}
+
+.product-item:hover .product-name:before, .product-name:hover:before {
+  width: 100%;
 }
 
 .product-price {
   font-size: 1.2rem;
+  font-family: 'Oswald', sans-serif;
 }
 
 .product-link {
