--- a/src/components/ProductList/productList.module.css
+++ b/src/components/ProductList/productList.module.css
@@ -57,6 +57,8 @@
   font-size: 1.75rem;
   position: relative;
   z-index: 1;
+  padding-left: var(--padding-product);
+  transition: color 1.5s ease;
 }
 
 .product-name:before {
@@ -64,7 +66,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  background: linear-gradient(90deg, #ffffff, var(--primary-100));
+  background: linear-gradient(90deg, #ffffffd1, var(--primary-100t));
   width: 0;
   height: 100%;
   transition: width 1s ease-in-out;
@@ -72,7 +74,7 @@
 }
 
 .product-item:hover .product-name, .product-name:hover {
-  color: var(--primary-100);
+  color: black;
 }
 
 .product-item:hover .product-name:before, .product-name:hover:before {
@@ -82,6 +84,7 @@
 .product-price {
   font-size: 1.2rem;
   font-family: 'Oswald', sans-serif;
+  padding-left: var(--padding-product);
 }
 
 .product-link {
