--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,12 +7,16 @@
 /* Set CSS properties to reuse color properties */
 :root {
   --primary-100: #3399FF;
+  --primary-100t: #3399FFe6;
   --primary-200: #f3ec78;
   --primary-300: #af4261;
   --primary-400: #bfdfff;
+  --primary-400t: #bfdfffcc;
   --primary-500: #091b2d;
   --light: #ffffff;
   --dark: #000000;
+
+  --padding-product: 5px;
 }
 
 html,
