styles, preparing for stripe integration

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,6 +25,7 @@
   --padding-nav-vert: 16px;
   --padding-nav-horiz: 24px;
   --padding-nav-bottom: 48px;
+  --padding-icon-spacing: 8px;
 
   --margin-nav-vert: 12px;
   --margin-base: 12px;
